--- a/app/templates/sass-tutorial/index.hbs
+++ b/app/templates/sass-tutorial/index.hbs
@@ -1,4 +1,4 @@
-<div id="STS_BG_index" class="STS_BG">
+<div class="STS_BG">
 	<div id="STS_header">
 		<h1>Welcome to the SASS World!</h1>
 	</div>
@@ -9,7 +9,7 @@
 				<img id="imgCSSRight" height="150" alt="SASS Logo" src="http://i.imgur.com/9HH2USb.png">
 			</div>
 			<h2>What is it?</h2>
-			<p>Simply put, SASS is CSS3 on steroids because its major goal is to bring a new depth of functionalities and syntax to CSS in order to help designers and programmers alike to easier develop bigger and powerfull websites. Not familiar with CSS3? If so, visit the <a href="http://htmldog.com/guides/css/beginner/">HTML Dog CSS Beginner Tutorial website</a> before reading further.</p>
+			<p>Simply put, SASS is CSS3 on steroids because its major goal is to bring a new depth of functionalities and syntax to CSS in order to help designers and programmers alike to easier develop bigger and powerful websites. Not familiar with CSS3? Then visit the <a href="http://htmldog.com/guides/css/beginner/">HTML Dog CSS Beginner Tutorial website</a> before reading further.</p>
 
 			<p>This new CSS3 depth is mainly introduced through several existing concepts such as variables, nesting, easy imports, inheritance and mixins from the programming world. This may not seem like a big deal for non-programmers, but the following points will hopefully show them otherwise:</p>
 			<ul>
@@ -21,14 +21,13 @@
 			<h2>CSS/SCSS/SASS</h2>
 			<ol>
 				<li><label class="li_strong">SASS: </label>A CSS pre-processor with many new features. In other words, you write something in SASS or in one of its other syntax and "magically" it will output CSS... Well, if you know what compilers are then it is not "magic", but simply the work of talented people. If you wish to read more about SASS, please visit the <a href="http://sass-lang.com/documentation/file.SASS_REFERENCE.html">official SASS references website</a>.</li>
-				<li><label class="li_strong">SCSS: </label>The new main syntax for SASS and what I will be using for this tutorial. You will write in SCSS and use a software that will compile it to CSS.</li>
-				<li><label class="li_strong">CSS: </label>your vanilla CSS3.</li>
+				<li><label class="li_strong">SCSS: </label>The new main syntax for SASS. In this tutorial you will write in SCSS and use a software will compile it to CSS3.</li>
+				<li><label class="li_strong">CSS: </label>your vanilla CSS3 ice cream.</li>
 			</ol>
 			<h2>Syntax:</h2>
-			<p>SCSS has several similarities to CSS, but these same similarities were taken one step further to allow the designer to write as less code as possible while also being able to use the same nesting structure from HTML for easily matching elements. I made available a <a href="https://gist.github.com/Deovandski/535ee886221d7e3fd491"> Github GIST</a> that examplafies how one can use the nesting structure.</p>
+			<p>SCSS has several similarities to CSS, but these same similarities were taken one step further to allow the designer to write as less code as possible while also being able to use the same nesting structure from HTML for easily matching elements. This small <a href="https://gist.github.com/Deovandski/535ee886221d7e3fd491">code snippet</a> exemplifies how one can use the nesting structure on SCSS.</p>
 			<p>Did you notice the $base-font-size? That is an example of a variable which was declared on another scss file, but it is available css wide including the possibility to change it a bit like the lighten() function on the .li_strong color declaration.</p>
-			<p>Variables, nesting and imports will be discussed in-depth in this tutorial, but first let's learn how to install and compile SCSS to CSS!</p>
-{{#link-to 'sassTutorial.installation' class="button1" }}Installing and Compiling SCSS{{/link-to}}
+			<p>Variables, nesting and imports will be discussed in-depth in this tutorial, but first let's learn how to {{#link-to 'sassTutorial.installation' class="button2" }}Install SASS and Compile SCSS{{/link-to}}</p>
 			<article>
 			</article>
 		</section>
