--- a/app/templates/sass-tutorial/installation/rails.hbs
+++ b/app/templates/sass-tutorial/installation/rails.hbs
@@ -1,15 +1,49 @@
 <article>
 <p>If you have a Rails project, then most likely SASS and all of its dependencies are automatically taken care of and compiled into CSS when you build your server as long as you have the following gems:</p>
 <pre>
-	//TODO
+	# SASS Gem
+gem 'sass-rails', '>=5.0'
+
+# Other interesting gems to pair just like a bacon & beer flight.
+gem "awesome_print", '>=1.6'
+gem "font-awesome-rails", '>=4.5'
+gem 'bourbon'
+gem 'neat'
 </pre>
-<p>If you added those gems to your .gemfile, then run bundle install and change your stylesheet to the following structure or: (another structure in which you find easier to work with)</p>
+<p>If you added those gems to your .gemfile, then run bundle install and change your stylesheet folder to the following structure or: (another structure in which you find easier to work with)</p>
 <pre>
-	//TODO
+application.scss
+shared
+	_header.scss
+	_main.scss
+	_footer.scss
 </pre>
-<p>After having the structure done, let's test out the installation by changing the H1 header styling around with the following code:</p>
+<p>After having the structure done, let's test out the installation by adding two H1 headers on your app and doing the following changes to the styling code:</p>
 <pre>
-	//TODO
+//application.scss
+
+@import "shared/**/*";
 </pre>
-<p> If your H1 header changed, then you are all set to learn about {{#link-to 'sassTutorial.importsAndVariables' class="button1"}}Imports and Variables!{{/link-to}}</p>
+<pre>
+//shared/_header.scss
+
+// Google Fonts
+@import url(http://fonts.googleapis.com/css?family=Poiret+One|Orbitron:500);
+
+// Font Variables
+$poiret-one: 'Poiret One', cursive; 
+$orbitron: 'Orbitron', sans-serif;
+
+h1:nth-of-type(1) {
+	font-family: $orbitron;
+	text-align: center;
+	color: hsla(192, 100%, 31%, 1);
+	text-shadow: 2px 2px  hsla(189, 93%, 84%, 0.6);
+	text-shadow: 5px 5px  hsla(189, 93%, 5%, 0.7);
+	background: hsla(189, 100%, 0%, 0.6);
+	text-transform: uppercase;
+}
+
+</pre>
+<p> If your first instance of a H1 header changed, then you are all set to learn about {{#link-to 'sassTutorial.importsAndVariables' class="button2"}}Imports and Variables!{{/link-to}}</p>
 </article>
