--- a/app/styles/sts_shared/_buttons.scss
+++ b/app/styles/sts_shared/_buttons.scss
@@ -1,4 +1,4 @@
-.button1 {
+.button {
 	background-color: $btn-background-color;
 	border: 1px solid darken($btn-background-color, 2%);
 	border-radius: $base-border-radius;
@@ -31,22 +31,17 @@
 	}
 }
 
+.button1 {
+	@extend .button;
+
+}
+
 .button2 {
+	@extend .button;
 	background-color: lighten($btn-background-color, 10%);
 	border: 1px solid darken($btn-background-color, 2%);
-	border-radius: $base-border-radius;
-	box-shadow: 0 1px 1px rgba(#000, 0.4);
 	color: $btn-text-color;
-	cursor: pointer;
-	display: inline-block;
-	font-size: 14px;
-	font-weight: bold;
-	outline: none;
 	padding: 0.2em 0.2em;
-	text-align: center;
-	text-decoration: none;
-	vertical-align: middle;
-	white-space: nowrap;
 
 	&:hover {
 		background-color: lighten($btn-background-color, 10%);
@@ -61,5 +56,29 @@
 	}
 	&:visited { 
 		color:  darken($btn-text-color, 10%);
+	}
+}
+
+.button3 {
+	@extend .button;
+	$btn3-bg-color: hsla(170, 82%, 50%, 0.83);
+	background-color: $btn3-bg-color;
+	border: 1px solid darken($btn3-bg-color, 50%);
+	color: hsla(239, 82%, 28%, 1);
+	padding: 0.1em 0.1em;
+
+	&:hover {
+		background-color: lighten($btn-background-color, 10%);
+		border-color: lighten($btn3-bg-color, 2%);
+		color: lighten(hsla(239, 82%, 28%, 1),100%);
+	}
+	&:active {
+		background-color: $btn-background-color;
+		border-color: lighten($btn3-bg-color, 2%);
+		box-shadow: 0 1px 2px rgba(#000, 0.2);
+		color: hsla(239, 82%, 28%, 1);
+	}
+	&:visited { 
+		color:  darken(hsla(239, 82%, 28%, 1), 10%);
 	}
 }
