progressBar Implementation part I

--- a/app/templates/ember-tutorial/installation.hbs
+++ b/app/templates/ember-tutorial/installation.hbs
@@ -31,8 +31,8 @@
 		</section>
 	</div>
 	<div id="ECT_main">
-			Emberize Everything:
-{{input type="checkbox" checked=checkValue_1}}
+			Checkbox 2:
+				{{input type="checkbox" checked=checkValue_main_1}}{{progressBarController_main_1}}
 		<section>
 			{{outlet}}
 		</section>
