--- a/app/templates/ember-tutorial/installation/github.hbs
+++ b/app/templates/ember-tutorial/installation/github.hbs
@@ -1,1 +1,25 @@
-
+<h2>Git & Github Tutorial</h2>
+<h3>Create an account & install Git {{input type="checkbox" checked=checkValue_git_1}}{{progressBarController_git_1}}</h3>
+<section>
+{{#if checkValue_git_1}}
+<p></p>
+{{else}}
+<p>//TODO</p>
+{{/if}}
+</section>
+<h3>Clone and setup Project {{input type="checkbox" checked=checkValue_git_2}}{{progressBarController_git_2}}</h3>
+<section>
+{{#if checkValue_git_2}}
+<p></p>
+{{else}}
+<p>// TODO</p>
+{{/if}}
+</section>
+<h3>How to use Versioning {{input type="checkbox" checked=checkValue_git_3}}{{progressBarController_git_3}}</h3>
+<section>
+{{#if checkValue_git_3}}
+<p></p>
+{{else}}
+<p>//TODO</p>
+{{/if}}
+</section>
