--- a/app/templates/ember-tutorial/installation/testing.hbs
+++ b/app/templates/ember-tutorial/installation/testing.hbs
@@ -1,1 +1,25 @@
-
+<h2>Testing Tutorial</h2>
+<h3>Project Tests {{input type="checkbox" checked=checkValue_testing_1}}{{progressBarController_testing_1}}</h3>
+<section>
+{{#if checkValue_testing_1}}
+<p></p>
+{{else}}
+<p>//TODO</p>
+{{/if}}
+</section>
+<h3>TravisCI {{input type="checkbox" checked=checkValue_testing_2}}{{progressBarController_testing_2}}</h3>
+<section>
+{{#if checkValue_testing_2}}
+<p></p>
+{{else}}
+<p>// TODO</p>
+{{/if}}
+</section>
+<h3>CodeClimate {{input type="checkbox" checked=checkValue_testing_3}}{{progressBarController_testing_3}}</h3>
+<section>
+{{#if checkValue_testing_3}}
+<p></p>
+{{else}}
+<p>//TODO</p>
+{{/if}}
+</section>
