--- a/app/templates/ember-tutorial/installation/ubuntu-virtual-box.hbs
+++ b/app/templates/ember-tutorial/installation/ubuntu-virtual-box.hbs
@@ -1,3 +1,25 @@
-<div>
-Done {{input type="checkbox" checked=checkValue_ubuntu_1}}{{progressBarController_ubuntu_1}}
-</div>
+<h2>Ubuntu Tutorial</h2>
+<h3>Virtual Box & Ubuntu 14.04 {{input type="checkbox" checked=checkValue_ubuntu_1}}{{progressBarController_ubuntu_1}}</h3>
+<section>
+{{#if checkValue_ubuntu_1}}
+<p></p>
+{{else}}
+<p>//TODO</p>
+{{/if}}
+</section>
+<h3>Overall Dependencies {{input type="checkbox" checked=checkValue_ubuntu_2}}{{progressBarController_ubuntu_2}}</h3>
+<section>
+{{#if checkValue_ubuntu_2}}
+<p></p>
+{{else}}
+<p>// TODO</p>
+{{/if}}
+</section>
+<h3>Project Dependencies {{input type="checkbox" checked=checkValue_ubuntu_3}}{{progressBarController_ubuntu_3}}</h3>
+<section>
+{{#if checkValue_ubuntu_3}}
+<p></p>
+{{else}}
+<p>//TODO</p>
+{{/if}}
+</section>
