--- a/app/templates/ember-tutorial/installation/heroku.hbs
+++ b/app/templates/ember-tutorial/installation/heroku.hbs
@@ -1,1 +1,25 @@
-
+<h2>Heroku Tutorial</h2>
+<h3>Setup Account {{input type="checkbox" checked=checkValue_heroku_1}}{{progressBarController_heroku_1}}</h3>
+<section>
+{{#if checkValue_heroku_1}}
+<p></p>
+{{else}}
+<p>First things first then... Go to <a href="https://dashboard.heroku.com/" target="_blank">Heroku Dashboard</a>. //TODO</p>
+{{/if}}
+</section>
+<h3>Hook Github Project {{input type="checkbox" checked=checkValue_heroku_2}}{{progressBarController_heroku_2}}</h3>
+<section>
+{{#if checkValue_heroku_2}}
+<p></p>
+{{else}}
+<p>// TODO</p>
+{{/if}}
+</section>
+<h3>Setup Account {{input type="checkbox" checked=checkValue_heroku_3}}{{progressBarController_heroku_3}}</h3>
+<section>
+{{#if checkValue_heroku_3}}
+<p></p>
+{{else}}
+<p>//TODO</p>
+{{/if}}
+</section>
