--- a/app/templates/ember-tutorial/installation/github.hbs
+++ b/app/templates/ember-tutorial/installation/github.hbs
@@ -1,23 +1,23 @@
 <h2>Git & Github Tutorial</h2>
-<h3>Create an account & install Git {{input type="checkbox" checked=checkValue_git_1}}{{progressBarController_git_1}}</h3>
+<h3>How to use Versioning{{input type="checkbox" checked=emberTutorial.checkValue_4}}</h3>
 <section>
-{{#if checkValue_git_1}}
+{{#if emberTutorial.checkValue_4}}
 <p></p>
 {{else}}
 <p>//TODO</p>
 {{/if}}
 </section>
-<h3>Clone and setup Project {{input type="checkbox" checked=checkValue_git_2}}{{progressBarController_git_2}}</h3>
+<h3>Clone and setup Project {{input type="checkbox" checked=emberTutorial.checkValue_5}}</h3>
 <section>
-{{#if checkValue_git_2}}
+{{#if emberTutorial.checkValue_5}}
 <p></p>
 {{else}}
 <p>// TODO</p>
 {{/if}}
 </section>
-<h3>How to use Versioning {{input type="checkbox" checked=checkValue_git_3}}{{progressBarController_git_3}}</h3>
+<h3>Create an account & install Git  {{input type="checkbox" checked=emberTutorial.checkValue_6}}</h3>
 <section>
-{{#if checkValue_git_3}}
+{{#if emberTutorial.checkValue_6}}
 <p></p>
 {{else}}
 <p>//TODO</p>
