--- a/app/templates/ember-tutorial/installation/heroku.hbs
+++ b/app/templates/ember-tutorial/installation/heroku.hbs
@@ -1,23 +1,23 @@
 <h2>Heroku Tutorial</h2>
-<h3>Setup Account {{input type="checkbox" checked=checkValue_heroku_1}}{{progressBarController_heroku_1}}</h3>
+<h3>Setup Account {{input type="checkbox" checked=emberTutorial.checkValue_10}}</h3>
 <section>
-{{#if checkValue_heroku_1}}
+{{#if emberTutorial.checkValue_10}}
 <p></p>
 {{else}}
 <p>First things first then... Go to <a href="https://dashboard.heroku.com/" target="_blank">Heroku Dashboard</a>. //TODO</p>
 {{/if}}
 </section>
-<h3>Hook Github Project {{input type="checkbox" checked=checkValue_heroku_2}}{{progressBarController_heroku_2}}</h3>
+<h3>Hook Github Project {{input type="checkbox" checked=emberTutorial.checkValue_11}}</h3>
 <section>
-{{#if checkValue_heroku_2}}
+{{#if emberTutorial.checkValue_11}}
 <p></p>
 {{else}}
 <p>// TODO</p>
 {{/if}}
 </section>
-<h3>Setup Account {{input type="checkbox" checked=checkValue_heroku_3}}{{progressBarController_heroku_3}}</h3>
+<h3>Live Website test {{input type="checkbox" checked=emberTutorial.checkValue_12}}</h3>
 <section>
-{{#if checkValue_heroku_3}}
+{{#if emberTutorial.checkValue_12}}
 <p></p>
 {{else}}
 <p>//TODO</p>
