--- a/app/templates/ember-tutorial/installation/testing.hbs
+++ b/app/templates/ember-tutorial/installation/testing.hbs
@@ -1,23 +1,23 @@
 <h2>Testing Tutorial</h2>
-<h3>Project Tests {{input type="checkbox" checked=checkValue_testing_1}}{{progressBarController_testing_1}}</h3>
+<h3>Project Tests {{input type="checkbox" checked=emberTutorial.checkValue_7}}</h3>
 <section>
-{{#if checkValue_testing_1}}
+{{#if emberTutorial.checkValue_7}}
 <p></p>
 {{else}}
 <p>//TODO</p>
 {{/if}}
 </section>
-<h3>TravisCI {{input type="checkbox" checked=checkValue_testing_2}}{{progressBarController_testing_2}}</h3>
+<h3>TravisCI {{input type="checkbox" checked=emberTutorial.checkValue_8}}</h3>
 <section>
-{{#if checkValue_testing_2}}
+{{#if emberTutorial.checkValue_8}}
 <p></p>
 {{else}}
 <p>// TODO</p>
 {{/if}}
 </section>
-<h3>CodeClimate {{input type="checkbox" checked=checkValue_testing_3}}{{progressBarController_testing_3}}</h3>
+<h3>CodeClimate {{input type="checkbox" checked=emberTutorial.checkValue_9}}</h3>
 <section>
-{{#if checkValue_testing_3}}
+{{#if emberTutorial.checkValue_9}}
 <p></p>
 {{else}}
 <p>//TODO</p>
